--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "orebishop",
+  "name": "craftique",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,13 +7,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^11.7.1",
     "framer-motion": "^8.0.2",
+    "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.2.0",
+    "react-country-state-city": "^1.1.12",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.12.0",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.6.0",
+    "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "redux-persist": "^6.0.0",
